# BakalarkaSource

./: .gitignore  calibration.py  ellipse_fitting.py  ellipse_guessing.py  ellipse_interpolation.py  mask.py  output.csv  show.py  test.py  tmp.txt  vectorize.py
Tools/: autocalibration.py  brightness_contrast.py  build_bulk.py  crop.py  current_shift.py  histogram.py  img2normal.py  relations.py  show.py  spline_builder.py
Tools/ellipseTools/: ellipse_common.py  ellipse_fitting.py  ellipse_interpolation.py  superellipse.py  vectorize.py
Tools/relations/: relations.ipynb  relations.py
Tools/scraper/: log.txt  scraper.py
app/: config.xml  main.py
app/BakalarkaTake2/: CMakeSettings.json  main.cpp
app/BakalarkaTake2/assets/: map.qrc  style.qrc
app/BakalarkaTake2/data/: roi_h.csv  roi_l.csv
app/BakalarkaTake2/engine/: Configuration.cpp  Configuration.h  Interpolator.cpp  Interpolator.h  RefMapEstimator.cpp  RefMapEstimator.h  Superellipse.cpp  Superellipse.h
app/BakalarkaTake2/relations/: results_a.txt  results_a2.txt  results_b.txt  results_c.txt  results_k.txt  results_roi.txt  results_roi_compensated.txt  results_roi_compensated_5.txt
app/DGP/: DGP.sln  Readme.txt
app/DGP/DGP/: DGP.cpp  DGP.vcproj  DGP.vcxproj  DGP.vcxproj.filters  DGPHeap.cpp  DGPHeap.h  DGPObList.cpp  DGPObList.h  DGP_Defines.h  DGP_FileIO.cpp  DGP_FileIO.h  (+8 more)
app/assets/: bse_segments.qrc  bse_segments_assets.py
app/src/: opencv_qt_compat.py
app/widgets/: GradientMap.py  ImageLabel.py  ImageLoader.py  ImageManager.py  MainWindow.py  PointSelector.py  ReflectanceMap.py  SegmentManager.py
app_c++/3DReconstruction/: CMakeLists.txt
app_c++/3DReconstruction/3DReconstruction/: CMakeLists.txt  Facet.cpp  Facet.h  FacetMatrix.cpp  FacetMatrix.h  main.cpp
app_c++/BakalarkaTake2/: CMakeLists.txt  CMakeSettings.json  main.cpp
app_c++/BakalarkaTake2/assets/: bse_segments.qrc
app_c++/BakalarkaTake2/assets/style/: style.qss
app_c++/BakalarkaTake2/engine/: Configuration.cpp  Configuration.h  Interpolator.h  InterpolatorData.h  Superellipse.cpp  Superellipse.h
app_c++/BakalarkaTake2/widgets/DetectorSettingsDialog/: DetectorSettingsDialog.cpp  DetectorSettingsDialog.h
app_c++/BakalarkaTake2/widgets/ImageLabel/: ImageLabel.h
app_c++/BakalarkaTake2/widgets/ImageManager/: ImageManager.h
app_c++/BakalarkaTake2/widgets/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
app_c++/BakalarkaTake2/widgets/ReflectanceMap/: ReflectanceMap.cpp  ReflectanceMap.h  ReflectanceMap.ui
app_c++/BakalarkaTake2/widgets/SegmentManager/: SegmentManager.cpp  SegmentManager.h  SegmentManager.ui
app_c++/Estimator/: CMakeLists.txt
app_c++/Estimator/data/: a.csv  b.csv
app_c++/Estimator/source/: RefMapEstimator.cpp  RefMapEstimator.h  main.cpp
app_c++/Estimator/source/data/: k  roi_h  roi_l
data/Au_on_CeOx/: 6_1.4_mikro-TIF.hdr  6_2.4_mikro-TIF.hdr  6_3.4_mikro-TIF.hdr  6_4.4_mikro-TIF.hdr  6_5.4_mikro-TIF.hdr  6_6.4_mikro-TIF.hdr  segments.txt
data/Matejka/: U_scaleE2_3.doc  matejka_pro_3d_1-tif.hdr  matejka_pro_3d_2-tif.hdr  matejka_pro_3d_3-tif.hdr  matejka_pro_3d_4-tif.hdr  matejka_pro_3d_5-tif.hdr  matejka_pro_3d_6-tif.hdr  segments.txt
data/oko_mouchy/: fly_eye_1-tif.hdr  fly_eye_2-tif.hdr  fly_eye_3-tif.hdr  fly_eye_4-tif.hdr  fly_eye_5-tif.hdr  fly_eye_6-tif.hdr  segments.txt
data/oxid_hlinity/: BSE_Q_1-tif.hdr  BSE_Q_1.tif  BSE_Q_2-tif.hdr  BSE_Q_2.tif  BSE_Q_3-tif.hdr  BSE_Q_3.tif  BSE_Q_4-tif.hdr  BSE_Q_4.tif  segments.txt
old/: calibration.py  gradient_space.py  helplib.py
(+144 files in other folders)
