# CMakeList.txt : CMake project for 3DReconstruction, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (3DReconstruction "3DReconstruction.cpp" "3DReconstruction.h")

# TODO: Add tests and install targets if needed.
